syntax = "proto3";
package lbm.base.ostracon.v1;

import "google/protobuf/any.proto";
import "google/api/annotations.proto";
import "ostracon/p2p/types.proto";
import "ostracon/types/block.proto";
import "ostracon/types/types.proto";
import "ostracon/abci/types.proto";
import "lbm/base/query/v1/pagination.proto";

option go_package = "github.com/line/lbm-sdk/client/grpc/tmservice";

// Service defines the gRPC querier service for ostracon queries.
service Service {
  // GetNodeInfo queries the current node info.
  rpc GetNodeInfo(GetNodeInfoRequest) returns (GetNodeInfoResponse) {
    option (google.api.http).get = "/lbm/base/ostracon/v1/node_info";
  }
  // GetSyncing queries node syncing.
  rpc GetSyncing(GetSyncingRequest) returns (GetSyncingResponse) {
    option (google.api.http).get = "/lbm/base/ostracon/v1/syncing";
  }
  // GetLatestBlock returns the latest block.
  rpc GetLatestBlock(GetLatestBlockRequest) returns (GetLatestBlockResponse) {
    option (google.api.http).get = "/lbm/base/ostracon/v1/blocks/latest";
  }
  // GetBlockByHeight queries block for given height.
  rpc GetBlockByHeight(GetBlockByHeightRequest) returns (GetBlockByHeightResponse) {
    option (google.api.http).get = "/lbm/base/ostracon/v1/blocks/{height}";
  }
  // GetBlockByHash queries block for given hash.
  rpc GetBlockByHash(GetBlockByHashRequest) returns (GetBlockByHashResponse) {
    option (google.api.http).get = "/lbm/base/ostracon/v1/blocks/{hash}";
  }
  // GetBlockResultsByHeight queries block results for given height.
  rpc GetBlockResultsByHeight(GetBlockResultsByHeightRequest) returns (GetBlockResultsByHeightResponse) {
    option (google.api.http).get = "/lbm/base/ostracon/v1/blockresults/{height}";
  }

  // GetLatestValidatorSet queries latest validator-set.
  rpc GetLatestValidatorSet(GetLatestValidatorSetRequest) returns (GetLatestValidatorSetResponse) {
    option (google.api.http).get = "/lbm/base/ostracon/v1/validatorsets/latest";
  }
  // GetValidatorSetByHeight queries validator-set at a given height.
  rpc GetValidatorSetByHeight(GetValidatorSetByHeightRequest) returns (GetValidatorSetByHeightResponse) {
    option (google.api.http).get = "/lbm/base/ostracon/v1/validatorsets/{height}";
  }
}

// GetValidatorSetByHeightRequest is the request type for the Query/GetValidatorSetByHeight RPC method.
message GetValidatorSetByHeightRequest {
  int64 height = 1;
  // pagination defines an pagination for the request.
  lbm.base.query.v1.PageRequest pagination = 2;
}

// GetValidatorSetByHeightResponse is the response type for the Query/GetValidatorSetByHeight RPC method.
message GetValidatorSetByHeightResponse {
  int64              block_height = 1;
  repeated Validator validators   = 2;
  // pagination defines an pagination for the response.
  lbm.base.query.v1.PageResponse pagination = 3;
}

// GetLatestValidatorSetRequest is the request type for the Query/GetValidatorSetByHeight RPC method.
message GetLatestValidatorSetRequest {
  // pagination defines an pagination for the request.
  lbm.base.query.v1.PageRequest pagination = 1;
}

// GetLatestValidatorSetResponse is the response type for the Query/GetValidatorSetByHeight RPC method.
message GetLatestValidatorSetResponse {
  int64              block_height = 1;
  repeated Validator validators   = 2;
  // pagination defines an pagination for the response.
  lbm.base.query.v1.PageResponse pagination = 3;
}

// Validator is the type for the validator-set.
message Validator {
  string              address           = 1;
  google.protobuf.Any pub_key           = 2;
  int64               voting_power      = 3;
  int64               proposer_priority = 4;
}

// GetBlockByHeightRequest is the request type for the Query/GetBlockByHeight RPC method.
message GetBlockByHeightRequest {
  int64 height = 1;
}

// GetBlockByHeightResponse is the response type for the Query/GetBlockByHeight RPC method.
message GetBlockByHeightResponse {
  .ostracon.types.BlockID block_id = 1;
  .ostracon.types.Block   block    = 2;
}

// GetBlockByHashRequest is the request type for the Query/GetBlockByHash RPC method.
message GetBlockByHashRequest {
  bytes hash = 1;
}

// GetBlockByHashResponse is the response type for the Query/GetBlockByHash RPC method.
message GetBlockByHashResponse {
  .ostracon.types.BlockID block_id = 1;
  .ostracon.types.Block   block    = 2;
}

// GetBlockResultsByHeightRequest is the request type for the Query/GetBlockResultsByHeight RPC method.
message GetBlockResultsByHeightRequest {
  int64 height = 1;
}

// GetBlockResultsByHeightResponse is the response type for the Query/GetBlockResultsByHeight RPC method.
message GetBlockResultsByHeightResponse {
  int64                                     height          = 1;
  repeated .ostracon.abci.ResponseDeliverTx txs_results     = 2;
  .ostracon.abci.ResponseBeginBlock         res_begin_block = 3;
  .ostracon.abci.ResponseEndBlock           res_end_block   = 4;
}

// GetLatestBlockRequest is the request type for the Query/GetLatestBlock RPC method.
message GetLatestBlockRequest {}

// GetLatestBlockResponse is the response type for the Query/GetLatestBlock RPC method.
message GetLatestBlockResponse {
  .ostracon.types.BlockID block_id = 1;
  .ostracon.types.Block   block    = 2;
}

// GetSyncingRequest is the request type for the Query/GetSyncing RPC method.
message GetSyncingRequest {}

// GetSyncingResponse is the response type for the Query/GetSyncing RPC method.
message GetSyncingResponse {
  bool syncing = 1;
}

// GetNodeInfoRequest is the request type for the Query/GetNodeInfo RPC method.
message GetNodeInfoRequest {}

// GetNodeInfoResponse is the request type for the Query/GetNodeInfo RPC method.
message GetNodeInfoResponse {
  .ostracon.p2p.DefaultNodeInfo default_node_info   = 1;
  VersionInfo                   application_version = 2;
}

// VersionInfo is the type for the GetNodeInfoResponse message.
message VersionInfo {
  string          name       = 1;
  string          app_name   = 2;
  string          version    = 3;
  string          git_commit = 4;
  string          build_tags = 5;
  string          go_version = 6;
  repeated Module build_deps = 7;
}

// Module is the type for VersionInfo
message Module {
  // module path
  string path = 1;
  // module version
  string version = 2;
  // checksum
  string sum = 3;
}
